--- a/src/common/style/element/index.scss
+++ b/src/common/style/element/index.scss
@@ -2,7 +2,7 @@
 @forward "element-plus/theme-chalk/src/common/var.scss" with (
   $colors: (
     "primary": (
-      "base": #1baeae,
+      "base": #ff8000,
     ),
   ),
 );
